Teacher Examples/m4.1/Example_05.txt

  File "Example_05.py", line 16
    print(f'How many World Series has the {baseballTeam.title()} won.')
                                                                      ^
IndentationError: unindent does not match any outer indentation level

